<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_image"
    android:id="@+id/layout"
    tools:context=".MainStart">

    <View
        android:id="@+id/start_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/start_rec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="192dp"
        android:layout_height="208dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/start_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/score_view"
        android:layout_width="327dp"
        android:layout_height="270dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/start_scoreboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="325dp"
        android:layout_height="46dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/white"
        android:text="@string/homeBtn"
        android:textColor="@color/orange"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_view" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="325dp"
        android:layout_height="46dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/orange"
        android:text="@string/playBtn"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_view" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/lugrasimo_regular"
        app:layout_constraintBottom_toTopOf="@+id/score_view"
        app:layout_constraintEnd_toEndOf="@+id/score_view"
        app:layout_constraintStart_toStartOf="@+id/score_view"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:shadowColor="@color/black"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="3"
        android:text="@string/scoreText"
        android:textColor="@color/orange"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/score_view"
        app:layout_constraintEnd_toEndOf="@+id/score_view"
        app:layout_constraintStart_toStartOf="@+id/score_view"
        app:layout_constraintTop_toTopOf="@+id/score_view"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/score_view"
        app:layout_constraintEnd_toEndOf="@+id/score_view"
        app:layout_constraintStart_toStartOf="@+id/score_view"
        app:layout_constraintTop_toBottomOf="@+id/ScoreText"
        android:text="0" />

    <ImageButton
        android:id="@+id/emailBtn"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/start_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"

        app:layout_constraintVertical_bias="0.524"
        app:srcCompat="@drawable/email_icon" />

    <ImageButton
        android:id="@+id/shareBtn"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/start_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"

        app:layout_constraintVertical_bias="0.524"
        app:srcCompat="@drawable/share_icon" />

    <ImageButton
        android:id="@+id/webBtn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/start_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"

        app:layout_constraintVertical_bias="0.524"
        app:srcCompat="@drawable/web_icon" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/saveBtn"
        android:textColor="@color/orange"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/score_view"
        app:layout_constraintEnd_toEndOf="@+id/score_view"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/score_view"
        app:layout_constraintTop_toBottomOf="@+id/highScore"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/highScoreBtn"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        android:onClick="onHighScore"
        android:text="@string/highScoreBtn"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/score_view"
        app:layout_constraintEnd_toEndOf="@+id/score_view"
        app:layout_constraintStart_toStartOf="@+id/score_view"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="125dp"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/highScoreBtn"
        app:layout_constraintEnd_toEndOf="@+id/score_view"
        app:layout_constraintStart_toStartOf="@+id/score_view"
        app:layout_constraintTop_toBottomOf="@+id/ScoreText"
        tools:text="0" />

    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="50dp"
        android:text="@string/scoreText01"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/highScoreBtn"
        app:layout_constraintEnd_toEndOf="@+id/score_view"
        app:layout_constraintStart_toStartOf="@+id/score_view"
        app:layout_constraintTop_toBottomOf="@+id/ScoreText" />

</androidx.constraintlayout.widget.ConstraintLayout>